[gd_scene load_steps=4 format=3]

[ext_resource type="Script" path="res://scenes/shop/shop_screen.gd" id="1"]
[ext_resource type="PackedScene" path="res://scenes/ui/nav_bar.tscn" id="2"]
[ext_resource type="Texture2D" path="res://assets/sprites/backgrounds/bg_shop.png" id="3"]

[node name="ShopScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource("3")
expand_mode = 1
stretch_mode = 5
mouse_filter = 2

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 10.0
offset_bottom = 55.0
theme_override_colors/font_color = Color(1, 0.85, 0.2, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 26
text = "Shop"
horizontal_alignment = 1

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
offset_top = 60.0
offset_right = 540.0
offset_bottom = -85.0
offset_left = 20.0
alignment = 1

[node name="StatusLabel" type="Label" parent="VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "No active boosts"
horizontal_alignment = 1

[node name="BoostButton" type="Button" parent="VBox"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(0, 60)
text = "Watch Ad for 2x Boost (30s)"

[node name="ComingSoon" type="Label" parent="VBox"]
layout_mode = 2
text = "More items coming soon..."
horizontal_alignment = 1

[node name="NavBar" type="PanelContainer" parent="." instance=ExtResource("2")]
unique_name_in_owner = true
layout_mode = 1
